/team_compositions + season_period GET-параметр
